snapshots/tests/form/endless_runner_game_vb6_0/endless_runner_game_vb6_0_dialog_form_load.snap
---
source: vb6parse/tests/form/endless_runner_game_vb6_0.rs
expression: form_file
---
form:
  Form:
    name: Dialog
    tag: ""
    index: 0
    properties:
      appearance: ThreeD
      auto_redraw: Manual
      back_color:
        System:
          index: 15
      border_style: Sizable
      caption: Dialog Caption
      client_height: 3195
      client_left: 2760
      client_top: 3750
      client_width: 6030
      clip_controls: Clipped
      control_box: Included
      draw_mode: CopyPen
      draw_style: Solid
      draw_width: 1
      enabled: Enabled
      fill_color:
        System:
          index: 0
      fill_style: Transparent
      font:
        name: MS Sans Serif
        size: 8
        charset: 0
        weight: 400
        underline: false
        italic: false
        strikethrough: false
      font_transparent: Transparent
      fore_color:
        System:
          index: 18
      has_dc: HasContext
      height: 240
      help_context_id: 0
      icon: ~
      key_preview: false
      left: 0
      link_mode: None
      link_topic: Form1
      max_button: Included
      mdi_child: false
      min_button: Included
      mouse_icon: ~
      mouse_pointer: Default
      moveable: Moveable
      negotiate_menus: true
      ole_drop_mode: None
      palette: ~
      palette_mode: HalfTone
      picture: ~
      right_to_left: LeftToRight
      scale_height: 3195
      scale_left: 0
      scale_mode: Twip
      scale_top: 0
      scale_width: 6030
      show_in_taskbar: Show
      start_up_position: WindowsDefault
      top: 0
      visible: Visible
      whats_this_button: Excluded
      whats_this_help: F1Help
      width: 240
      window_state: Normal
    controls:
      - name: CancelButton
        tag: ""
        index: 0
        kind:
          CommandButton:
            properties:
              appearance: ThreeD
              back_color:
                System:
                  index: 15
              cancel: false
              caption: Cancel
              causes_validation: "Yes"
              default: false
              disabled_picture: ~
              down_picture: ~
              drag_icon: ~
              drag_mode: Manual
              enabled: Enabled
              height: 195
              help_context_id: 0
              left: 4680
              mask_color:
                RGB:
                  red: 192
                  green: 192
                  blue: 192
              mouse_icon: ~
              mouse_pointer: Default
              ole_drop_mode: None
              picture: ~
              right_to_left: LeftToRight
              style: Standard
              tab_index: 1
              tab_stop: Included
              tool_tip_text: ""
              top: 600
              use_mask_color: DoNotUseMaskColor
              whats_this_help_id: 0
              width: 1215
      - name: OKButton
        tag: ""
        index: 0
        kind:
          CommandButton:
            properties:
              appearance: ThreeD
              back_color:
                System:
                  index: 15
              cancel: false
              caption: OK
              causes_validation: "Yes"
              default: false
              disabled_picture: ~
              down_picture: ~
              drag_icon: ~
              drag_mode: Manual
              enabled: Enabled
              height: 375
              help_context_id: 0
              left: 4680
              mask_color:
                RGB:
                  red: 192
                  green: 192
                  blue: 192
              mouse_icon: ~
              mouse_pointer: Default
              ole_drop_mode: None
              picture: ~
              right_to_left: LeftToRight
              style: Standard
              tab_index: 0
              tab_stop: Included
              tool_tip_text: ""
              top: 120
              use_mask_color: DoNotUseMaskColor
              whats_this_help_id: 0
              width: 1215
    menus: []
objects: []
version:
  major: 5
  minor: 0
attributes:
  name: Dialog
  global_name_space: Local
  creatable: "False"
  predeclared_id: "True"
  exposed: "False"
  description: ~
  ext_key: {}
cst:
  root:
    kind: Root
    children:
      - kind: OptionStatement
        children:
          - kind: OptionKeyword
            text: Option
          - kind: Whitespace
            text: " "
          - kind: ExplicitKeyword
            text: Explicit
          - kind: Newline
            text: "\r\n"
      - kind: Newline
        text: "\r\n"
      - kind: SubStatement
        children:
          - kind: PrivateKeyword
            text: Private
          - kind: Whitespace
            text: " "
          - kind: SubKeyword
            text: Sub
          - kind: Whitespace
            text: " "
          - kind: Identifier
            text: CancelButton_Click
          - kind: ParameterList
            children:
              - kind: LeftParenthesis
                text: (
              - kind: RightParenthesis
                text: )
          - kind: Newline
            text: "\r\n"
          - kind: StatementList
            children:
              - kind: Newline
                text: "\r\n"
          - kind: EndKeyword
            text: End
          - kind: Whitespace
            text: " "
          - kind: SubKeyword
            text: Sub
          - kind: Newline
            text: "\r\n"
      - kind: Newline
        text: "\r\n"
      - kind: SubStatement
        children:
          - kind: PrivateKeyword
            text: Private
          - kind: Whitespace
            text: " "
          - kind: SubKeyword
            text: Sub
          - kind: Whitespace
            text: " "
          - kind: Identifier
            text: OKButton_Click
          - kind: ParameterList
            children:
              - kind: LeftParenthesis
                text: (
              - kind: RightParenthesis
                text: )
          - kind: Newline
            text: "\r\n"
          - kind: StatementList
            children:
              - kind: Newline
                text: "\r\n"
          - kind: EndKeyword
            text: End
          - kind: Whitespace
            text: " "
          - kind: SubKeyword
            text: Sub
          - kind: Newline
            text: "\r\n"
